--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ Jinja2==3.1.6
 Werkzeug==3.1.3
 psycopg2-binary==2.9.10
 python-dotenv==1.0.0
+
+Pillow==11.3.0
+openpyxl==3.1.5
+python-magic==0.4.27
